<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_mahar" app:layout_constraintBottom_toTopOf="@+id/lblSignIn"/>

    <TextView
            android:id="@+id/lblSignIn"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:autoSizeTextType="uniform"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/sign_in_to_acc"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_wrapBehaviorInParent="included" app:layout_constraintBottom_toTopOf="@+id/frameLayout2"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20094563" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/layout_border"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSignIn">

        <TextView
                android:id="@+id/lblEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:ems="10"

                android:gravity="bottom"
                android:minHeight="48dp"
                android:text="@string/sign_in_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/txtUsername"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/input_border"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/lblPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblEmail"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

        <TextView
                android:id="@+id/lblPassword"
                android:layout_width="0dp"
                android:layout_height="31dp"
                android:layout_marginStart="35dp"
                android:ems="10"
                android:gravity="bottom"
                android:minHeight="48dp"
                android:text="@string/sign_password"
                app:layout_constraintBottom_toTopOf="@+id/txtPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        />

        <EditText
                android:id="@+id/txtPassword"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/input_border"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        <Button
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="50dp" android:id="@+id/btnSign"
                android:layout_marginTop="29dp"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>