<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
            android:focusable="true"
            android:layout_height="wrap_content" android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" android:id="@+id/aboutMeCard"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/linearLayout1">
            <TextView
                    android:text="@string/about_me_title"
                    android:layout_width="0dp"
                    android:textSize="16sp"
                    android:textColor="@color/primary"
                    android:fontFamily="sans-serif-medium"
                    android:layout_height="wrap_content" android:id="@+id/textView1"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintBottom_toTopOf="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView2" android:layout_marginTop="10dp"/>
            <TextView
                    android:justificationMode="inter_word"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/about_me_body"
                    android:layout_width="0dp"
                    android:id="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView1" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp" android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            android:focusable="true"
            android:layout_height="wrap_content" android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" android:id="@+id/educationCard"
            app:layout_constraintTop_toBottomOf="@+id/aboutMeCard" android:layout_marginTop="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/linearLayout2">
            <TextView
                    android:text="@string/about_me_edu"
                    android:layout_width="0dp"
                    android:textSize="16sp"
                    android:textColor="@color/primary"
                    android:fontFamily="sans-serif-medium"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/educationList"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/educationList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp" android:layout_marginBottom="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            android:focusable="true"
            android:layout_height="wrap_content" android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" android:id="@+id/certificationCard"
            app:layout_constraintTop_toBottomOf="@+id/educationCard" android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/linearLayout3">
            <TextView
                    android:text="@string/about_me_cert"
                    android:layout_width="0dp"
                    android:textSize="16sp"
                    android:textColor="@color/primary"
                    android:fontFamily="sans-serif-medium"
                    android:layout_height="wrap_content" android:id="@+id/textView4"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/certificationList"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/certificationList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp" android:layout_marginBottom="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>